wrap in code tags button added css fixes

--- a/src/App.css
+++ b/src/App.css
@@ -89,7 +89,6 @@
   font-size: 1.2rem;
   height: 100%;
   width: 3rem;
-  padding: 4px 13px;
   margin:0 4px;
   border:2px #282c34 solid;
   border-radius: 5px;
