--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+:root {
+  --codebg: #eeeeee ;
+}
+
+
 body {
   margin: 0;
   /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -33,4 +38,32 @@ h2 {
 
 p {
   font-size: 18px;
+}
+
+img {
+  max-width: 80%;
+}
+
+pre {
+  background-color: var(--codebg);
+  font-family: monospace;
+  font-size: 1rem;
+  padding: 1rem;
+  border:1px var(--codebg) solid;
+  border-radius: 10px;
+  padding-left: 2.5rem;
+}
+
+code {
+  background-color: var(--codebg);
+  border:1px var(--codebg) solid;
+  border-radius: 5px;
+  font-family: monospace;
+  font-size: 1.2rem;
+  margin:1rem 0 ;
+}
+
+li {
+  font-size: 18px;
+  margin:0.8rem;
 }
